solved the overflow problem

--- a/client/src/app/components/letters/letters.component.scss
+++ b/client/src/app/components/letters/letters.component.scss
@@ -30,7 +30,7 @@
     color: black;
     border: transparent;
     text-align: center;
-    margin-left: 25.5%;
+    margin-left: 28%;
 }
 .font-size-filler{
     background-color: rgb(213, 231, 213);
@@ -39,5 +39,5 @@
     color: black;
     border: none;
     text-align: center;
-    margin-left: 8%;
+    margin-left: 2%;
 }
