--- a/client/src/app/pages/game-page/game-page.component.scss
+++ b/client/src/app/pages/game-page/game-page.component.scss
@@ -1,21 +1,22 @@
 .container {
-    height: 120%;
+    height: 100%;
     display: flex;
-    overflow-x: hidden;
-    overscroll-behavior: contain;
+    overflow: hidden;
     width: 100%;
-    max-height: 120%;
+    max-height: 100%;
     max-width: 100%;
     background-color: rgb(213, 231, 213);
     align-items: center;
 }
 
 .play-area {
+    overflow: hidden;
     display: grid;
     width: min-content;
     outline: none;
 }
 .section-25{
+    overflow: hidden;
     max-height: 100%;
     height: 100%;
     min-height: 100%;
@@ -26,6 +27,7 @@
 }
 
 .section-20{
+    overflow: hidden;
     max-height: 100%;
     height: 100%;
     min-height: 100%;
@@ -36,6 +38,7 @@
 }
 
 .section-55{
+    overflow: hidden;
     max-height: 100%;
     height: 100%;
     min-height: 100%;
